--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "express": "^4.13.3",
+    "marked": "^0.3.5",
+    "moment": "^2.10.6",
     "multer": "^1.0.3",
     "mysql": "^2.8.0",
     "orm": "^2.1.26"
