--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "cookie-parser": "^1.3.5",
+    "debug": "^2.2.0",
     "ejs": "^2.3.3",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
+    "lodash": "^3.10.1",
     "marked": "^0.3.5",
     "moment": "^2.10.6",
     "multer": "^1.0.3",
     "mysql": "^2.8.0",
-    "orm": "^2.1.26",
     "sequelize": "^3.5.1"
   }
 }
