--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^2.2.0",
     "ejs": "^2.3.3",
     "express": "^4.13.3",
+    "express-partials": "^0.3.0",
     "express-session": "^1.11.3",
     "lodash": "^3.10.1",
     "marked": "^0.3.5",
