--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/9958/NEMBlog#readme",
   "dependencies": {
+    "akismet": "0.0.13",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "cookie-parser": "^1.3.5",
