--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "akismet": "0.0.13",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
+    "compression": "^1.6.1",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
     "ejs": "^2.3.3",
