--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/9958/NEMBlog#readme",
   "dependencies": {
     "akismet": "0.0.13",
+    "async": "^1.5.2",
     "body-parser": "^1.13.3",
     "colors": "^1.1.2",
     "compression": "^1.6.1",
